--- a/custom/css-custom.css
+++ b/custom/css-custom.css
@@ -1,3 +1,8 @@
 .navbar-custom {
     background-color: white;
+    font-weight: bold;
+}
+
+.body-home{
+    font-family: 'Montserrat', sans-serif;
 }
