--- a/custom/css-custom.css
+++ b/custom/css-custom.css
@@ -1,6 +1,31 @@
 .navbar-custom {
-  background-color: white;
+  background-color: #FFF7F7;
   font-weight: bold;
+}
+/* header {
+  width: 100%;
+  height: 100vh;
+  background: url(../img/image.png) no-repeat;
+  background-position: right;
+  background-color: #FFF7F7;
+} */
+header {
+  width: 100%;
+  height: 100vh;
+  background-color: #FFF7F7;
+}
+header .navbar {
+  background-color: transparent !important;
+}
+header .container .row .col-md-6 {
+  height: 70vh;
+  display: flex;
+  align-items: center;
+}
+header .container h1 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  color: #a30016;;
 }
 
 #brand {
@@ -11,6 +36,9 @@
   font-family: "Montserrat", sans-serif;
 }
 
+.gayaNav{
+  margin-left: 120px !important;
+}
 .dekor1 {
   z-index: 1;
   position: absolute;
