--- a/custom/css-about.css
+++ b/custom/css-about.css
@@ -79,7 +79,15 @@
   }
   .misi{
     height: 100%;
+    width: 100%;
     margin-top: 90px;
+  }
+  .card-img-top{
+    height: 65px;
+    width: 65px;
+    display: flex;
+    margin: auto;
+    
   }
   
   footer{
